--- a/back-skeleton/pom.xml
+++ b/back-skeleton/pom.xml
@@ -32,12 +32,18 @@
 			<artifactId>lombok</artifactId>
 			<version>1.18.42</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 			<version>3.0.0-M1</version>
+		</dependency>   
+		<dependency>
+			<groupId>me.paulschwarz</groupId>
+			<artifactId>spring-dotenv</artifactId>
+			<version>4.0.0</version>
 		</dependency>
+
+  
 
 		<dependency>
 			<groupId>org.postgresql</groupId>
