--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.takima</groupId>
-	<artifactId>back-skeleton</artifactId>
+	<artifactId>Marmiton-Back</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>back-skeleton</name>
+	<name>Marmiton-Back</name>
 	<description>Skeleton of an API project</description>
 	<properties>
 		<java.version>17</java.version>
