--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
-spring.datasource.url=jdbc:postgresql://${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}
+spring.datasource.url=jdbc:postgresql://localhost:5432/${DATABASE_NAME}
+#spring.datasource.url=jdbc:postgresql://${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}
 spring.datasource.username=${DATABASE_USER}
 spring.datasource.password=${DATABASE_PASSWORD}
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
-spring.jpa.hibernate.ddl-auto=create
-spring.sql.init.mode=always
-spring.jpa.defer-datasource-initialization=true
+#spring.jpa.hibernate.ddl-auto=create
+#spring.sql.init.mode=always
+#spring.jpa.defer-datasource-initialization=true
