vrai final readme

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
+# avec docker à la racine
 spring.datasource.url=jdbc:postgresql://db:5432/${DATABASE_NAME}
+# avec docker compose depuis le back
+# spring.datasource.url=jdbc:postgresql://localhost:5432/${DATABASE_NAME}
+# avec neon db
 #spring.datasource.url=jdbc:postgresql://${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}
 spring.datasource.username=${DATABASE_USER}
 spring.datasource.password=${DATABASE_PASSWORD}
